Fix clone function on mobile menu flyout
fix cloneDropdownParent() clone element
fix .caret back arrow function & add "back" text
double check mobile menu flyout transitions in all browsers
add login link and redirect

--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -14,7 +14,7 @@ $transition: 0.3s;
     flex-flow: column nowrap;
     width: 100%;
     height: 7rem;
-    background-color: rgba(color(neutral-lightest), 0.97);
+    background-color: rgba(color(neutral-lightest), 0.99);
     justify-content: center;
     align-items: center;
 
@@ -71,6 +71,7 @@ $transition: 0.3s;
         margin: 0 auto;
         padding: 0 1.5rem;
         width: 100%;
+        height: 100%;
         max-width: $boxed-width;
         flex-flow: row wrap;
         flex: 1 100%;
@@ -81,21 +82,22 @@ $transition: 0.3s;
         padding: 0;
         list-style: none;
         transform: scale3d(0, 0, 0);
-        flex: 1 100%;
+        flex: 0 auto;
         opacity: 0;
-        transition: opacity 0.3s 0.4s;
         display: flex;
         flex-flow: column nowrap;
-        align-items: center;
 
         @at-root .active#{&} {
-            transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
             opacity: 1;
+            transition: opacity 0.3s 0.4s, transform 0.3s ease-in-out;
+
         }
 
         @at-root .active.open#{&} {
             transform: translate3d(-100rem, 0, 0);
-            transition: transform 0.2s;
+            transition: transform 0.3s ease-in-out;
+
         }
 
         @include desktop {
@@ -103,7 +105,6 @@ $transition: 0.3s;
             transform: scale3d(1, 1, 1);
             flex-flow: row wrap;
             justify-content: flex-end;
-            flex: 0 auto;
         }
 
         .nav-menu-item {
@@ -113,17 +114,10 @@ $transition: 0.3s;
         }
 
         .dropdown {
-            text-align: center;
             display: inline-block;
-            position: relative;
 
             > a {
                 position: relative;
-
-                @at-root .open#{&} {
-                    display: inline-block;
-                    margin: 0 0 1rem;
-                }
 
                 &::before,
                 &::after {
@@ -173,24 +167,20 @@ $transition: 0.3s;
                 }
             }
 
-            &.open {
-                position: absolute;
-                top: 50%;
-                left: 0;
-                transform: translate3d(100rem, -50%, 0);
-                transition: transform;
-                width: 100%;
-            }
+            .clone {
+                a {
+                    color: color(blue);
+                    font-weight: 600;
+                }
 
-            .caret {
-                @at-root .active.open#{&} {
-                    width: 2.7rem;
-                    height: 2.6rem;
-                    text-indent: -9999rem;
-                    position: absolute;
-                    left: -2.7rem;
-                    top: 50%;
-                    transform: translate3d(0, -1.3rem, 0);
+
+                .back {
+                    display: block;
+                    margin: 0 0 1rem;
+                    padding-left: 2rem;
+                    position: relative;
+                    color: color(cyan);
+                    cursor: pointer;
 
                     &::before,
                     &::after {
@@ -201,7 +191,7 @@ $transition: 0.3s;
                         margin-top: -0.7rem;
                         position: absolute;
                         transform: rotate3d(0, 0, 1, 45deg);
-                        left: 0.5rem;
+                        left: 0.3rem;
                         top: 50%;
                         width: 0;
                         cursor: pointer;
@@ -213,28 +203,30 @@ $transition: 0.3s;
                         margin-top: -0.1rem;
                         transform: rotate3d(0, 0, 1, 135deg);
                     }
-                }
-            } // end .caret
+
+                    &:focus {
+                        outline: none;
+                    }
+                } // end .back
+            }
         }
 
         .dropdown-menu {
-            width: 0;
-            height: 0;
             overflow: hidden;
             list-style: none;
-            text-align: center;
             margin: 0;
             padding: 0;
-            font-size: 1.6rem;
             font-weight: 300;
-
-            @at-root .active.open#{&} {
-                width: auto;
-                height: auto;
-            }
+            font-size: 1.6rem;
+            position: absolute;
+            top: 0%;
+            left: 0;
+            transform: translate3d(200rem, 0, 0);
+            transition: transform 0.3s ease-in-out;
 
             @include desktop {
-                position: absolute;
+                width: 0;
+                height: 0;
                 top: 3rem;
                 left: 50%;
                 transform: translate3d(-50%, 0, 0);
@@ -249,8 +241,15 @@ $transition: 0.3s;
                 }
             }
 
+            &.open {
+                @at-root .active.open#{&} {
+                    transform: translate3d(100rem, 0, 0);
+
+                }
+            }
+
             li {
-                margin: 0 0 1rem;
+                margin: 0 0 0.5rem;
 
                 @include desktop {
                     margin: 1rem;
@@ -275,7 +274,7 @@ $transition: 0.3s;
         font-size: 1.6rem;
 
         @at-root .active#{&} {
-            width: auto;
+            width: 100%;
             height: auto;
         }
 
@@ -290,10 +289,21 @@ $transition: 0.3s;
 
         .container {
             height: 100%;
-            justify-content: flex-end;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+
+            @include desktop {
+                justify-content: flex-end;
+            }
+        }
+
+        .nav-menu {
+            margin-left: -9rem;
         }
 
         .nav-menu-item {
+
             a {
 
                 color: color(cyan);
@@ -319,7 +329,7 @@ $transition: 0.3s;
             position: absolute;
             bottom: 0;
             left: 0;
-            width: 100%;
+            width: 0;
             overflow: hidden;
             display: flex;
             flex-flow: row nowrap;
@@ -376,6 +386,7 @@ $transition: 0.3s;
             order: 2;
             height: 7rem;
             transform: translate3d(0, 0, 0);
+            transition: transform;
 
             @at-root .transparent#{&} {
                 background-color: rgba(color(neutral-darkest), 0.2);
@@ -387,22 +398,24 @@ $transition: 0.3s;
                 left: 0;
                 width: 100%;
                 transform: translate3d(0, 0, 0);
-                transition: transform 0.2s;
                 background-color: rgba(color(neutral-lightest), 0.97);
             }
 
             @at-root .visible#{&} {
                 transform: translate3d(0, 100%, 0);
-                transition: transform 0.2s;
+                transition: transform 0.2s 0.1s;
+
             }
         }
 
         .container {
-            justify-content: space-between;
+            justify-content: center;
+            align-items: center;
             padding: 1.5rem;
 
             @include desktop {
                 height: 100%;
+                justify-content: space-between;
             }
         }
 
@@ -414,10 +427,6 @@ $transition: 0.3s;
 
             @include desktop {
                 margin: 0;
-            }
-
-            @at-root .open#{&} {
-                margin-top: 0;
             }
         }
 
@@ -561,7 +570,7 @@ $transition: 0.3s;
         user-select: none;
         background: transparent;
         position: absolute;
-        top: 2rem;
+        top: 2.4rem;
         right: 1.5rem;
 
         @include desktop {
